--- a/css/index.css
+++ b/css/index.css
@@ -76,13 +76,13 @@ h1, h2, h3, h4, h5 {
 	
 	@media( max-width: 800px ) {
 		.container {
-			width: 760px;
+			width: 100%;
 		}
 	}
 
 	@media( max-width: 500px ) {
 		.container {
-			width: 460px;
+			width: 100%;
 		}
 	}
 
@@ -97,11 +97,11 @@ h1, h2, h3, h4, h5 {
 			flex-wrap: wrap;
 			flex-direction: column-reverse;
 			align-items: center;
+			width: 100%;
 		}
 	}
 
   header nav {
-
 	width: 691px;
 	vertical-align: top;
 	margin-top: 35px;
@@ -109,7 +109,11 @@ h1, h2, h3, h4, h5 {
 	
 	@media( max-width: 800px ) {
 		header nav{
-			width: 740px;
+			margin-top: 54px;
+			display:flex;
+
+			width: 100%;
+	
 		}
 	}
 
@@ -117,13 +121,15 @@ h1, h2, h3, h4, h5 {
 		header nav{
 			display: flex;
 			flex-direction: column;
-			width: 500px;
+			width: 100%;
+			margin-left: 0;
+			margin-top: 37px;
 		}
 	}
 
   header nav a {
 
-	margin-right: 65px;
+	margin-right: 40px;
 	font-size: 14px;
 	color: gray;
 	text-decoration: none;
@@ -131,7 +137,10 @@ h1, h2, h3, h4, h5 {
 	
 	@media( max-width: 800px ) {
 		header nav a{
-			margin-right: 78px;
+			/* display:flex;
+			flex-direction: row; */
+			width: 100%;
+			margin-left:1%;
 			font-size: 16px;
 		}
 	}
@@ -147,6 +156,7 @@ h1, h2, h3, h4, h5 {
 			background: white;
 			font-size: 20px;
 			border: 1px solid black;
+			margin-left:0;
 		}
 	}
 
@@ -182,6 +192,8 @@ h1, h2, h3, h4, h5 {
 			display:flex;
 			flex-wrap: wrap;
 			flex-direction: column;
+			padding-top:15px;
+		
 			align-items: center;
 		}
 	}
@@ -218,6 +230,7 @@ h1, h2, h3, h4, h5 {
 	
 	@media( max-width: 500px ) {
 		.cta .cta-text {
+			width: 100%;
 			margin-top: 50px;
 			font-size: 72px;
 		}
@@ -262,7 +275,7 @@ h1, h2, h3, h4, h5 {
 			display: none;
 		}
 	}
-  
+
   .main-content {
 	border-top: 1px solid black;
 	margin-top: 76px;
@@ -279,7 +292,7 @@ h1, h2, h3, h4, h5 {
 
 	@media( max-width: 500px ) {
 		.main-content {
-
+			width: 100%;
 			border-top: 1px solid black;
 			margin-top: 45px;
 			padding-top: 37px;
@@ -320,7 +333,7 @@ h1, h2, h3, h4, h5 {
 	@media( max-width: 500px ) {
 		.main-content .top-content .text-content {
 			margin-top: 24px ;
-			width: 400px;
+			width: 100%;
 			line-height:18px;
 			margin-bottom: 20px;
 			margin-right: 15px;
@@ -352,6 +365,8 @@ h1, h2, h3, h4, h5 {
 			width: 100%;
 			height: 100px;
 			margin-top: 30px;
+			padding:0 10px 0 10px
+
 			
 		}
 	}
@@ -484,14 +499,34 @@ h1, h2, h3, h4, h5 {
 	border-bottom: 1px solid black;
 	margin: 25px 0 ;
 	padding-bottom: 25px;
+	width: 100%;
 }
 
+@media( max-width: 500px ) {
+	.upper-content {
+		line-height:20px;
+		padding: 10px;
+	}
+}
   .middle-content{
 	display: flex;
 	justify-content: space-between;
-
+	width: 100%;
 }
 	
+@media( max-width: 800px ) {
+	.middle-content {
+			width:100%;
+	}
+}
+
+@media( max-width: 500px ) {
+	.middle-content {
+		display: flex;
+		flex-direction: column;
+		width:100%;
+	}
+}
   .service-text{
 		padding: 10px;
 		height: 200px;
@@ -502,12 +537,12 @@ h1, h2, h3, h4, h5 {
 	}
 @media( max-width: 800px ) {
 	.service-text {
-		padding: 10px;
-		height: 210px;
-		width:  360px;
-		background: rgb(236, 236, 234);
+		padding: 2%;
+		height: 250px;
+		width:  100%;
+		background: rgb(224, 224, 223);
 		border:1px solid black;
-		margin-bottom: 25px
+		margin:0 2% 25px 2%;
 	}
 }
 
@@ -515,15 +550,20 @@ h1, h2, h3, h4, h5 {
 	.service-text {
 		display: flex;
 		flex-direction: column;
+		height: 250px;
 		padding: 10px;
-		height: 300px;
 		width:  100%;
 		background: rgb(236, 236, 234);
 		border:1px solid black;
-		margin-bottom: 40px
+		line-height:20px;
 	}
 }
 
+@media( max-width: 500px ) {
+	.serbutton{
+		font-size: 20px;
+	}
+}
 
 	.funfacts{
 		margin: 25px 0;
@@ -537,8 +577,8 @@ h1, h2, h3, h4, h5 {
 		display: flex;
 		flex-direction: column-reverse;
 		margin-bottom: 25px;
+	}
 }
-
 	.fun-p{
 		margin-right:50px;
 	}
@@ -549,10 +589,11 @@ h1, h2, h3, h4, h5 {
 			flex-direction: column;
 			margin-top: 25px;
 	}
-
+}
 ul {
 	margin:20px 0;
 }
 li {
 	margin:10px 0;
 }
+
